#PROJETO - Ordenação de pastas

--- a/readme.me
+++ b/readme.me
@@ -1,1 +1,5 @@
-teste
+Inicialização do projeto para o TCC 
+- Desenvolvido
+  Criação dos Cards e do bord
+- Em andamento
+  Criação do Modal para exibir os dados
