--- a/readme.me
+++ b/readme.me
@@ -1,5 +1,7 @@
-Inicialização do projeto para o TCC 
-- Desenvolvido
-  Criação dos Cards e do bord
-- Em andamento
-  Criação do Modal para exibir os dados
+####_Executando projeto_####
+- clone project.
+- cd backend
+- npm start
+- cd ..
+- cd frontend
+- npm start
